test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 22 Sep 2025 05:09:09 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="P//k2tj6KbmWL8SXgWwMkyV56P+TWxeF", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}